# hhfft

./: CMakeLists.txt  README
python/: hhfft_test.py  hhfftmodule.cpp  setup.py
src/: aligned_arrays.cpp  aligned_arrays.h  architecture.cpp  architecture.h  hhfft.cpp  hhfft.h  hhfft_1d.cpp  hhfft_1d.h  hhfft_1d_avx_d.cpp  hhfft_1d_avx_d.h  hhfft_1d_avx_real_d.cpp  hhfft_1d_avx_real_d.h  hhfft_1d_d.cpp  hhfft_1d_d.h  hhfft_1d_plain_d.cpp  hhfft_1d_plain_d.h  hhfft_1d_plain_impl.h  hhfft_1d_plain_real_d.cpp  hhfft_1d_plain_real_d.h  hhfft_1d_plain_real_impl.h  hhfft_1d_real.cpp  hhfft_1d_real.h  hhfft_1d_real_d.cpp  hhfft_1d_real_d.h  hhfft_2d.cpp  hhfft_2d.h  hhfft_2d_d.cpp  hhfft_2d_d.h  hhfft_2d_real.cpp  hhfft_2d_real.h  hhfft_2d_real_d.cpp  hhfft_2d_real_d.h  hhfft_avx512f_d.cpp  hhfft_avx512f_d.h  hhfft_avx_d.cpp  hhfft_avx_d.h  hhfft_base.h  hhfft_plain_avx512f_d.cpp  hhfft_plain_avx512f_d.h  hhfft_plain_avx_d.cpp  (+9 more)
src/1d_complex/: hhfft_1d_complex_avx_d.cpp  hhfft_1d_complex_avx_f.cpp  hhfft_1d_complex_common_d.h  hhfft_1d_complex_d.cpp  hhfft_1d_complex_d.h  hhfft_1d_complex_f.cpp  hhfft_1d_complex_f.h  hhfft_1d_complex_plain_d.cpp  hhfft_1d_complex_plain_f.cpp  hhfft_1d_complex_setter.h  hhfft_1d_complex_setter_d.cpp  hhfft_1d_complex_setter_f.cpp  hhfft_1d_complex_sse2_d.cpp  hhfft_1d_complex_sse2_f.cpp
src/1d_real/: hhfft_1d_real_avx_d.cpp  hhfft_1d_real_avx_f.cpp  hhfft_1d_real_plain_d.cpp  hhfft_1d_real_plain_f.cpp  hhfft_1d_real_setter.h  hhfft_1d_real_setter_d.cpp  hhfft_1d_real_setter_d.h  hhfft_1d_real_setter_f.cpp  hhfft_1d_real_setter_f.h  hhfft_1d_real_sse2_d.cpp  hhfft_1d_real_sse2_f.cpp
src/2d_complex/: hhfft_2d_complex_avx_d.cpp  hhfft_2d_complex_avx_f.cpp  hhfft_2d_complex_d.cpp  hhfft_2d_complex_d.h  hhfft_2d_complex_f.cpp  hhfft_2d_complex_f.h  hhfft_2d_complex_plain_d.cpp  hhfft_2d_complex_plain_f.cpp  hhfft_2d_complex_setter.h  hhfft_2d_complex_setter_d.cpp  hhfft_2d_complex_setter_f.cpp  hhfft_2d_complex_sse2_d.cpp  hhfft_2d_complex_sse2_f.cpp
src/2d_real/: hhfft_2d_real_avx_d.cpp  hhfft_2d_real_avx_f.cpp  hhfft_2d_real_plain_d.cpp  hhfft_2d_real_plain_f.cpp  hhfft_2d_real_setter.h  hhfft_2d_real_setter_d.cpp  hhfft_2d_real_setter_d.h  hhfft_2d_real_setter_f.cpp  hhfft_2d_real_sse2_d.cpp  hhfft_2d_real_sse2_f.cpp
src/common/: hhfft_1d_complex_avx_common_d.h  hhfft_1d_complex_plain_common_d.h  hhfft_1d_complex_sse2_common_d.h  hhfft_common.h  hhfft_common_avx_d.h  hhfft_common_avx_f.h  hhfft_common_complex_d.h  hhfft_common_d.h  hhfft_common_f.h  hhfft_common_plain_d.h  hhfft_common_plain_f.h  hhfft_common_sse2_d.h  hhfft_common_sse2_f.h
src/raders/: raders.cpp  raders_avx_d.h  raders_avx_f.h  raders_d.cpp  raders_d.h  raders_plain_d.h  raders_plain_f.h  raders_sse2_d.h  raders_sse2_f.h
test/: test1.cpp  test2.cpp
